Updated model to gpt3.5 turbo 0125

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 // Fill this in with your OpenAI API key
+// After you add your API key, make sure your .gitignore file includes .env
 REACT_APP_OPENAI_API_KEY=''
