--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "ai-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An AI client for using OpenAI ChatGPT API easily in your projects",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "ai",
+    "chatgpt",
+    "prompt",
+    "openai",
+    "gen ai"
+  ],
   "author": "Jonathan Fraimorice",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.8.2"
+    "@types/node": "^20.11.17"
   }
 }
