--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An AI client for using OpenAI ChatGPT API easily in your projects",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && tsc --declaration"
   },
   "keywords": [
     "ai",
