--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "outDir": "./dist" // Optional: Specifies the output directory for declaration files
-    // Other compiler options...
+    "outDir": "./dist"
   },
-  "include": [
-    "**/*.ts" // Adjust this based on your project structure
-  ]
+  "include": ["*.ts"]
 }
